--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "immer": "^10.1.1",
     "lucide-react": "^0.377.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
