--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "tempo-devtools": "^2.0.99"
   }
 }
